--- a/src/components/sec1/sec1.css
+++ b/src/components/sec1/sec1.css
@@ -1,5 +1,5 @@
 .section1{
-    background-image: url("./images/Home-bg1.svg");
+    background-image: url("../../assets/Home-bg1.svg");
     height: 100vh;
     width: 100%;
     background-size: cover;
