--- a/src/components/sec1/sec1.css
+++ b/src/components/sec1/sec1.css
@@ -13,3 +13,45 @@
     align-content: center;
     padding: 0;
 }
+
+.section1-overlay{
+    background-color:black;
+    position: absolute;
+    opacity: .7;
+    width: 100%;
+    height: 100vh;
+    z-index: 0;
+}
+
+.section1-content{
+    position: absolute;
+    height: 100vh;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 0 0 5%;
+    z-index: 1;
+    opacity: 1;
+}
+  
+.section1-content > .button-set{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.a-button{
+    text-decoration: none;
+}  
+
+.special-button{
+    background-color: #FF723E;
+    --edge-size: 1rem;
+    clip-path: polygon(0 0,calc(100% - var(--edge-size) - 3px) 0,calc(100% - var(--edge-size) - 1px) calc(0% + 0.5px),calc(100% - var(--edge-size) + 1px) calc(0% + 1.5px),calc(100% - 3px) calc(var(--edge-size) - 2px),calc(100% - 1px) calc(var(--edge-size) + 0.5px),calc(100% - 0.5px) calc(var(--edge-size) + 1.5px),calc(100%) calc(var(--edge-size) + 3px),100% 100%,calc(var(--edge-size) + 3px) 100%,calc(var(--edge-size) + 1px) calc(100% - 0.5px),calc(var(--edge-size) - 1px) calc(100% - 1.5px),calc(0% + 1.5px) calc(100% - var(--edge-size) + 1px),calc(0% + 0.5px) calc(100% - var(--edge-size) - 1px),0 calc(100% - var(--edge-size) - 2px));
+    height: 50px;
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
